//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  fullName String [not null]
  email String [unique, not null]
  phone_number String [unique, not null]
  password String [not null]
  Order Order [not null]
  deleted Boolean [not null, default: false]
  role Role [not null]
}

Table Order {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  name String [not null]
  email String [not null]
  phone_number String [not null]
  note String [not null]
  address String [not null]
  status Boolean [not null, default: false]
  total_money Float [not null]
  user User
  userId String [not null]
  Order_Details Order_Details [not null]
}

Table Order_Details {
  id String [pk]
  Product_Id Product
  Order_Id Order
  productId String
  orderId String
  price Float [not null]
  num Int [not null]
  total_money Float [not null]
}

Table Product {
  id String [pk]
  category_Id Category
  category_Id_Relation String [not null]
  name String [not null]
  price Float [not null]
  priceSale Float [not null]
  images Images [not null]
  description String [not null]
  Sold Int [not null]
  In_Stock Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deleted Boolean [not null, default: false]
  Order_Details Order_Details [not null]
  Product_Entry Product_Entry [not null]
}

Table Images {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Product Product
  productId String
}

Table Category {
  id String [pk]
  name String [unique, not null]
  product Product [not null]
}

Table Product_Entry {
  id String [pk]
  additional_price Float [not null]
  capacity Capacity [not null]
  colour Colour [not null]
  Product Product
  productId String
}

Table Capacity {
  id String [pk]
  capacity String
  productEntry Product_Entry
  productEntryId String [not null]
}

Table Colour {
  id String [pk]
  colour String
  productEntry Product_Entry
  productEntryId String [not null]
}

Enum Role {
  ADMIN
  USER
}

Ref: Order.userId > User.id

Ref: Order_Details.productId > Product.id

Ref: Order_Details.orderId > Order.id

Ref: Product.category_Id_Relation > Category.id

Ref: Images.productId > Product.id

Ref: Product_Entry.productId > Product.id

Ref: Capacity.productEntryId > Product_Entry.id

Ref: Colour.productEntryId > Product_Entry.id